src/objects/zkmulti__Shipment_Status__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__Batch_Id__c</fullName>
        <label>Batch ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Bulk_Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bulk Shipment</label>
        <referenceTo>zkmulti__MCBulk_Shipment__c</referenceTo>
        <relationshipLabel>Shipment Statuses</relationshipLabel>
        <relationshipName>Shipment_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Print_Batch_Id__c</fullName>
        <label>Print Batch ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>zkmulti__MCShipment__c</referenceTo>
        <relationshipLabel>Shipment Status</relationshipLabel>
        <relationshipName>Shipment_Status</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zkmulti__Status_Message__c</fullName>
        <label>Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PROCESSING</fullName>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>VALIDATED</fullName>
                </value>
                <value>
                    <fullName>SUCCESS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zkmulti__Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zkmulti__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Shipment Status</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Shipment Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>